# OptiXDimsTest

./: CMakeLists.txt  OptiXDimsTest.cu  README.md  autotest.py  deviceCode.cu
